step1, step2 수정본(최종)